@@ -1,3 +1,7 @@
+2011-07-14  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
+        * Tag as TrigT1CaloMonitoring-00-10-01
+        * JobOptions update.
+
 2011-07-13  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
         * Tag as TrigT1CaloMonitoring-00-10-00
         * New tool EmEfficienciesMonTool from Hardeep.
